/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
option java_package = "org.apache.raft.proto";
option java_outer_classname = "RaftClientProtocolProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package common.raft;

import "Raft.proto";

// normal client request
message RaftClientRequestProto {
  optional RaftRpcRequestProto rpcRequest = 1;
  optional ClientMessageEntryProto message = 2;
  optional bool readOnly = 3;
}

message RaftClientReplyProto {
  optional RaftRpcReplyProto rpcReply = 1;
  optional ClientMessageEntryProto message = 2;
  // the following 3 fields are used to indicate the server is not leader
  optional bool isNotLeader = 3;
  optional RaftPeerProto suggestedLeader = 4;
  repeated RaftPeerProto peersInConf = 5;
}

// setConfiguration request
message SetConfigurationRequestProto {
  optional RaftRpcRequestProto rpcRequest = 1;
  repeated RaftPeerProto peers = 2;
}

service RaftClientProtocolService {
  rpc submitClientRequest(RaftClientRequestProto)
      returns(RaftClientReplyProto);

  rpc setConfiguration(SetConfigurationRequestProto)
      returns(RaftClientReplyProto);
}
